@@ -2,16 +2,48 @@
 
 Java project using OOP (Object Oriented Programming)
 
+## Members:
+
 <p>
-<strong>Members: </strong> <br>
     <ul>
-        <li>Alan Silva dos Santos</li>
-        <li>Arthur Solla Gregorut Favero</li>
-        <li>Guilherme Alves Martins</li>
-        <li>Jorge luiz dos Santos Oliveira</li>
-        <li>Rafaela Eduarda Teixeira Silva</li>
+        <li>👽 Alan Silva dos Santos</li>
+        <li>👽 Arthur Solla Gregorut Favero</li>
+        <li>👽 Guilherme Alves Martins</li>
+        <li>👽 Jorge luiz dos Santos Oliveira</li>
+        <li>👽 Rafaela Eduarda Teixeira Silva</li>
     </ul>
 </p>
 
+## What are we using in this project?
+- Java
+- Object-oriented Programming (OOP)
+- JavaFX
+- Use Case Diagram
+- Class diagram
+- Git/Github
+- Wireframes
+- MySQL
+
+## What will you need?
 
 <strong>Java SE Development Kit:   </strong>  17.0.3<br>
+
+Donwload Scene Builder 18.0.0 (You'll need Java 11 or higher): https://gluonhq.com/products/scene-builder/
+![image](https://user-images.githubusercontent.com/79291946/165002425-f7f4b314-a410-4211-9ba8-a9cac27f5151.png)
+
+
+Donwload JavaFX, Version: 18.0.1, Type: SDK: https://gluonhq.com/products/javafx/
+![image](https://user-images.githubusercontent.com/79291946/165002422-07b201b5-37e0-4677-ad20-9081d968dc34.png)
+
+
+If you are using Eclipse, IntelliJ or Netbeans:
+
+    --module-path "PATH" --add-modules javafx.controls,javafx.fxml
+    
+If you are using vscode:
+
+    "vmArgs": "--module-path \"PATH\" --add-modules javafx.controls,javafx.fxml"
+
+
+
+
